--- a/public/panel.html
+++ b/public/panel.html
@@ -82,6 +82,39 @@
                 </div>
             </div>
         </div>
+
+        <!-- 4. GESTIÓN DE USUARIOS -->
+        <div class="row mt-3">
+            <div class="col-md-6">
+                <div class="card shadow-sm border-info">
+                    <div class="card-header bg-info text-white">Gestión de Usuarios</div>
+                    <div class="card-body">
+                        <input id="newUser" class="form-control mb-1" placeholder="Usuario">
+                        <input id="newPass" type="password" class="form-control mb-2" placeholder="Contraseña">
+                        <select id="newRole" class="form-select mb-2">
+                            <option value="agent">Agente</option>
+                            <option value="admin">Admin</option>
+                        </select>
+                        <button onclick="crearUsuario()" class="btn btn-info w-100 mb-2">➕ Crear Usuario</button>
+                        <div id="userMsg" class="small text-muted"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="card shadow-sm border-secondary">
+                    <div class="card-header bg-secondary text-white">Usuarios Registrados</div>
+                    <div class="card-body p-0">
+                        <table class="table table-sm mb-0">
+                            <thead class="table-light">
+                                <tr><th>Usuario</th><th>Rol</th></tr>
+                            </thead>
+                            <tbody id="userTable"></tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -89,9 +122,9 @@
         const socket = io();
         document.getElementById('uDisplay').innerText = localStorage.getItem('user');
         loadContacts();
+        listarUsuarios();
 
         // --- GESTIÓN CONTACTOS ---
-
         async function loadContacts() {
             const res = await fetch('/my-contacts');
             if(res.status===403) location.href='/login.html';
@@ -105,8 +138,8 @@
                 <li class="list-group-item d-flex justify-content-between align-items-center p-1 contact-item">
                     <span>${c.name} <span class="text-muted">(${c.phone})</span></span>
                     <div>
-                        <span class="action-btn text-primary" onclick="editMode('${c.id}', '${c.name}', '${c.phone}')">✏️</span>
-                        <span class="action-btn text-danger" onclick="deleteOne('${c.id}')">🗑️</span>
+                        <span class="action-btn text-primary" onclick="editMode('${c._id}', '${c.name}', '${c.phone}')">✏️</span>
+                        <span class="action-btn text-danger" onclick="deleteOne('${c._id}')">🗑️</span>
                     </div>
                 </li>`;
             });
@@ -154,50 +187,4 @@
             const file = document.getElementById('fileInput').files[0];
             if (!file) return alert("Selecciona archivo");
             const formData = new FormData();
-            formData.append('file', file);
-            const res = await fetch('/import-contacts', { method: 'POST', body: formData });
-            const data = await res.json();
-            alert(data.msg || data.error);
-            if(data.msg) loadContacts();
-        }
-
-        // --- HELPERS VISUALES ---
-        function editMode(id, name, phone) {
-            document.getElementById('editId').value = id;
-            document.getElementById('name').value = name;
-            document.getElementById('phone').value = phone;
-            document.getElementById('btnSave').innerText = "Actualizar";
-            document.getElementById('btnSave').classList.replace('btn-warning', 'btn-info');
-            document.getElementById('btnCancel').style.display = 'inline-block';
-        }
-
-        function cancelEdit() {
-            document.getElementById('editId').value = '';
-            document.getElementById('name').value = '';
-            document.getElementById('phone').value = '';
-            document.getElementById('btnSave').innerText = "Guardar";
-            document.getElementById('btnSave').classList.replace('btn-info', 'btn-warning');
-            document.getElementById('btnCancel').style.display = 'none';
-        }
-
-        // --- ENVÍO ---
-        async function send() {
-            const msg = document.getElementById('msg').value;
-            if(!msg.includes('{name}')) return alert("Se recomienda usar {name} en el mensaje");
-            if(confirm("¿Iniciar Envío Masivo?")) {
-                await fetch('/send-campaign', {
-                    method:'POST', headers:{'Content-Type':'application/json'},
-                    body: JSON.stringify({message: msg})
-                });
-            }
-        }
-
-        async function logout() { await fetch('/logout', {method:'POST'}); location.href='/login.html'; }
-
-        // --- SOCKETS ---
-        socket.on('qr', d => document.getElementById('qrArea').innerHTML = `<img src="${d.src}" width="150"><p>Escanea</p>`);
-        socket.on('ready', () => document.getElementById('qrArea').innerHTML = `<h1 class="text-success display-1">✅</h1><p>Conectado</p>`);
-        socket.on('log', d => document.getElementById('logs').innerHTML = `<div>${d.msg}</div>` + document.getElementById('logs').innerHTML);
-    </script>
-</body>
-</html>
+            formData.append('file
