--- a/public/admin.html
+++ b/public/admin.html
@@ -4,7 +4,6 @@
     <title>Gerencia - Reportes WhatsApp</title>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Librería para exportar a Excel -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body class="bg-light p-4">
@@ -17,7 +16,7 @@
             </div>
         </div>
 
-        <!-- 1. CREAR USUARIOS -->
+        <!-- CREAR USUARIOS -->
         <div class="card mb-4 shadow-sm">
             <div class="card-header bg-primary text-white">👥 Gestión de Equipo</div>
             <div class="card-body d-flex gap-2 align-items-end">
@@ -27,15 +26,15 @@
                 </div>
                 <div class="flex-grow-1">
                     <label class="small">Contraseña</label>
-                    <input id="newPass" class="form-control" placeholder="Ej: clave123">
+                    <input id="newPass" type="password" class="form-control" placeholder="Ej: clave123">
                 </div>
                 <button onclick="createUser()" class="btn btn-success">Crear Usuario</button>
             </div>
         </div>
 
-        <!-- 2. REPORTES Y EXPORTACIÓN -->
+        <!-- REPORTES -->
         <div class="card shadow-sm border-success">
-            <div class="card-header bg-success text-white">📥 Generador de Reportes (Excel/CSV)</div>
+            <div class="card-header bg-success text-white">📥 Generador de Reportes (Excel)</div>
             <div class="card-body">
                 <div class="row mb-3">
                     <div class="col-md-3">
@@ -50,23 +49,20 @@
                         <button onclick="generarReporte()" class="btn btn-dark w-100">🔍 Buscar y Exportar</button>
                     </div>
                 </div>
-
                 <hr>
-
-                <!-- TABLA DE VISUALIZACIÓN -->
                 <h6>Vista Previa de Datos:</h6>
                 <div style="height: 400px; overflow: auto; border: 1px solid #ccc;">
-                    <table class="table table-striped table-hover table-sm" id="tablaReporte">
+                    <table class="table table-striped table-hover table-sm">
                         <thead class="table-dark" style="position: sticky; top: 0;">
                             <tr>
                                 <th>Fecha</th>
                                 <th>Usuario</th>
                                 <th>Tipo</th>
-                                <th>Detalle del Mensaje</th>
+                                <th>Detalle</th>
                             </tr>
                         </thead>
                         <tbody id="tbody">
-                            <tr><td colspan="4" class="text-center text-muted">Selecciona fechas para ver datos</td></tr>
+                            <tr><td colspan="4" class="text-center text-muted py-4">Selecciona fechas para ver datos</td></tr>
                         </tbody>
                     </table>
                 </div>
@@ -75,65 +71,79 @@
     </div>
 
     <script>
-        // Configurar fechas por defecto (Hoy)
-        document.getElementById('dateStart').valueAsDate = new Date();
-        document.getElementById('dateEnd').valueAsDate = new Date();
+        // Fecha por defecto: hoy
+        const today = new Date().toISOString().split('T')[0];
+        document.getElementById('dateStart').value = today;
+        document.getElementById('dateEnd').value = today;
 
         async function createUser() {
-            const u = document.getElementById('newUser').value;
+            const u = document.getElementById('newUser').value.trim();
             const p = document.getElementById('newPass').value;
-            if(!u || !p) return alert("Completa los datos");
+            if (!u || !p) return alert("⚠️ Completa ambos campos");
 
-            const res = await fetch('/admin/create-user', {
-                method: 'POST', headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({ username: u, password: p })
-            });
-            const d = await res.json();
-            alert(d.status || d.error);
-            if(d.status) {
-                document.getElementById('newUser').value = '';
-                document.getElementById('newPass').value = '';
+            try {
+                const res = await fetch('/admin/create-user', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ username: u, password: p })
+                });
+                const d = await res.json();
+                alert(d.success ? "✅ " + d.message : "❌ " + (d.error || "Error"));
+                if (d.success) {
+                    document.getElementById('newUser').value = '';
+                    document.getElementById('newPass').value = '';
+                }
+            } catch (err) {
+                alert("❌ Error de conexión");
             }
         }
 
         async function generarReporte() {
             const start = document.getElementById('dateStart').value;
             const end = document.getElementById('dateEnd').value;
+            if (!start || !end) return alert("⚠️ Selecciona ambas fechas");
 
-            const res = await fetch(`/admin/export-logs?start=${start}&end=${end}`);
-            const logs = await res.json();
+            try {
+                const res = await fetch(`/admin/export-logs?start=${start}&end=${end}`);
+                const logs = await res.json();
 
-            if(logs.length === 0) {
-                alert("No hay movimientos en esas fechas.");
-                return;
-            }
+                const tbody = document.getElementById('tbody');
+                tbody.innerHTML = '';
 
-            // 1. Llenar tabla visual
-            const tbody = document.getElementById('tbody');
-            tbody.innerHTML = '';
-            logs.forEach(l => {
-                tbody.innerHTML += `
-                    <tr>
-                        <td>${new Date(l.timestamp).toLocaleString()}</td>
-                        <td class="fw-bold">${l.username}</td>
-                        <td><span class="badge bg-info text-dark">${l.type}</span></td>
-                        <td class="small text-muted">${l.message}</td>
-                    </tr>`;
-            });
+                if (!logs || logs.length === 0) {
+                    tbody.innerHTML = '<tr><td colspan="4" class="text-center text-muted py-4">No hay registros en las fechas seleccionadas</td></tr>';
+                    return;
+                }
 
-            // 2. Exportar a Excel automáticamente
-            if(confirm(`Se encontraron ${logs.length} registros. ¿Descargar Excel?`)) {
-                descargarExcel(logs);
+                logs.forEach(l => {
+                    const fecha = new Date(l.timestamp).toLocaleString('es-ES');
+                    tbody.innerHTML += `
+                        <tr>
+                            <td>${fecha}</td>
+                            <td class="fw-bold">${l.username || 'Sistema'}</td>
+                            <td><span class="badge bg-primary">${l.type || 'general'}</span></td>
+                            <td class="small text-muted">${l.message}</td>
+                        </tr>`;
+                });
+
+                if (confirm(`✅ ${logs.length} registros encontrados.\n¿Descargar Excel?`)) {
+                    descargarExcel(logs);
+                }
+            } catch (err) {
+                alert("❌ Error al cargar datos");
+                console.error(err);
             }
         }
 
-        function descargarExcel(jsonDatos) {
-            // Convertir JSON a Hoja de trabajo
-            const ws = XLSX.utils.json_to_sheet(jsonDatos);
+        function descargarExcel(data) {
+            const ws = XLSX.utils.json_to_sheet(data.map(l => ({
+                Fecha: new Date(l.timestamp).toLocaleString('es-ES'),
+                Usuario: l.username,
+                Tipo: l.type,
+                Mensaje: l.message
+            })));
             const wb = XLSX.utils.book_new();
-            XLSX.utils.book_append_sheet(wb, ws, "Reporte WhatsApp");
-
-            // Generar archivo
+            XLSX.utils.book_append_sheet(wb, ws, "Reporte");
             const fecha = new Date().toISOString().slice(0,10);
             XLSX.writeFile(wb, `Reporte_WhatsApp_${fecha}.xlsx`);
         }
